--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,48 +3,94 @@
   }
 
 body {
-    background-color: pink;
+    background-image: url(../images/background2.png);
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
 }
 
 header {
-    /* padding: 10px 0px; */
     margin-bottom: 20px;
     background-color: #ffffff;
-    height: 50px;
+    height: 70px;
     color: #777777;
     border: 1px solid #666666;
-    /* position: sticky; */
+    position: sticky;
     top: 0px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 header h1{
     float: left;
+    font-weight: 300;
     text-align: center;
     background-color: #4aaaa5;
     width: 300px;
-    height: 50px;
+    height: 70px;
     margin: 0px;
     margin-left: 250px;
-    padding-top: 5px;
+    padding-top: 15px;
     color: #ffffff;
     position: relative;
 }
 
 #nav {
     float: right;
-    padding-top: 12px;
-    /* clear: both; */
-    padding-right: 20px;
+    padding-top: 25px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding-right: 10px;
     position: relative;
+    word-spacing: 0.15em;
+}
+
+a:link {
+    text-decoration: none;
+} 
+
+a:visited {
+    color: #4aaaa5;
+}
+
+a:hover {
+    font-style: italic;
 }
 
 main {
     width: 960px;
     background-color: #ffffff;
-    text-align: center;
+    text-align: left;
+    padding: 20px;
     border: 1px solid #dddddd;
     margin-left: 250px;
+    letter-spacing: 0.1em;
+    line-height: 1.5em;
+    word-spacing: 0.1em;
+    font-size: 0.9em;
 }
+
+main hr {
+    border: 2px dotted #dddddd;
+    margin: 20px;
+}
+
+main h2 {
+    color: #4aaaa5;
+    font-size: 2em;
+    font-weight: 200;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+main img {
+    float: left;
+    margin-right: 10px;
+    height: 200px;
+    width: 200px;
+}
+
+footer {
+    height: 80px;
+    width: 100%;
+    background-color: #666666;
+    border-top: 5px solid #4aaaa5;
+    margin-top: 10px;
+}
+
