--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,9 @@ body {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
 }
+#wrapper {
+    border: 1px solid #000;
+}
 
 header {
     margin-bottom: 20px;
@@ -25,12 +28,15 @@ header h1{
     text-align: center;
     background-color: #eaac9d;
     width: 300px;
+    
     height: 68px;
     margin: 0px;
-    margin-left: 250px;
+    margin-left:16.5%;
+    margin-right: 16.5%;
     padding-top: 15px;
     color: #ffffff;
     position: relative;
+    clear: both;
 }
 
 #nav {
@@ -56,11 +62,13 @@ a:hover {
 
 main {
     width: 960px;
+    max-width: 67%;
     background-color: #ffffff;
     text-align: left;
     padding: 20px;
     border: 1px solid #dddddd;
-    margin-left: 250px;
+    margin-left:16.5%;
+    margin-right: 16.5%;
     letter-spacing: 0.1em;
     line-height: 1.5em;
     word-spacing: 0.1em;
@@ -88,9 +96,18 @@ main img {
 
 footer {
     height: 80px;
-    width: 100%;
+    width: 99%;
+    right: 0.5%;
+    left: 0.5%;
     background-color: gray;
     border-top: 5px solid #eaac9d;
     margin-top: 10px;
+    bottom: 0px;
+    /* margin-left: 10px; */
+    /* margin-right: 10px; */
+}
+
+footer.bottom {
+    position: absolute;
 }
 
