--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,25 @@
 * {
     box-sizing: border-box;
   }
+  html,
+  body {
+     margin:0;
+     padding:0;
+     height:100%;
+  }
 
 body {
     background-image: url(../images/background2.png);
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
 }
-#wrapper {
-    border: 1px solid #000;
+
+#container {
+    min-height: 100%;
+    position: relative;
 }
 
-header {
+#header {
     margin-bottom: 20px;
     background-color: #ffffff;
     height: 70px;
@@ -22,7 +30,7 @@ header {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-header h1{
+#header h1{
     float: left;
     font-weight: 300;
     text-align: center;
@@ -32,7 +40,6 @@ header h1{
     height: 68px;
     margin: 0px;
     margin-left:16.5%;
-    margin-right: 16.5%;
     padding-top: 15px;
     color: #ffffff;
     position: relative;
@@ -60,7 +67,7 @@ a:hover {
     font-style: italic;
 }
 
-main {
+#main {
     width: 960px;
     max-width: 67%;
     background-color: #ffffff;
@@ -73,41 +80,37 @@ main {
     line-height: 1.5em;
     word-spacing: 0.1em;
     font-size: 0.9em;
+    padding-bottom: 60px;
+
 }
 
-main hr {
+#main hr {
     border: 2px dotted #dddddd;
     margin: 20px;
 }
 
-main h2 {
+#main h2 {
     color: #eaac9d;
     font-size: 2em;
     font-weight: 200;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-main img {
+#main img {
     float: left;
     margin-right: 10px;
     height: 200px;
     width: 200px;
 }
 
-footer {
-    height: 80px;
-    width: 99%;
-    right: 0.5%;
-    left: 0.5%;
+#footer {
+    height: 50px;
+    width: 100%;
     background-color: gray;
-    border-top: 5px solid #eaac9d;
-    margin-top: 10px;
+    border-top: 8px solid #eaac9d;
+    margin-top: 20px;
     bottom: 0px;
-    /* margin-left: 10px; */
-    /* margin-right: 10px; */
-}
-
-footer.bottom {
-    position: absolute;
+    opacity: 60%; 
+    position:absolute;
 }
 
