--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,35 @@ a:hover {
     width: 200px;
 }
 
+input[type=text] {
+    width: 100%;
+}
+
+input[name=fullname], 
+input[name=email]{
+    margin: 8px 0;
+    padding: 12px 10px; 
+  }
+
+input[name=message] {
+    height: 200px;
+    padding-top: 0;
+    padding-bottom: 150px;
+    text-align: top;
+
+}
+
+input:focus {
+    border: 3px solid #eaac9d;
+  }
+
+input[type=submit] {
+    background-color: #eaac9d;
+    border: none;
+    color: #ffffff;
+    margin: 4px 2px;
+}
+
 #footer {
     height: 50px;
     width: 100%;
@@ -110,7 +139,7 @@ a:hover {
     border-top: 8px solid #eaac9d;
     margin-top: 20px;
     bottom: 0px;
-    opacity: 60%; 
+    /* opacity: 60%;  */
     position:absolute;
 }
 
