portfolio layout complete

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,8 +35,9 @@ body {
     font-weight: 300;
     text-align: center;
     background-color: #eaac9d;
-    width: 300px;
-    
+    width: fit-content;
+    padding-left: 10px;
+    padding-right: 10px;
     height: 68px;
     margin: 0px;
     margin-left:16.5%;
@@ -53,6 +54,7 @@ body {
     padding-right: 10px;
     position: relative;
     word-spacing: 0.15em;
+    width: fit-content;
 }
 
 a:link {
@@ -118,7 +120,6 @@ input[name=message] {
     padding-top: 0;
     padding-bottom: 150px;
     text-align: top;
-
 }
 
 input:focus {
@@ -140,6 +141,39 @@ input[type=submit] {
     margin-top: 20px;
     bottom: 0px;
     /* opacity: 60%;  */
-    position:absolute;
+    position: absolute;
 }
 
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+
+#port {
+    position: relative;
+    margin: 10px;
+    float: left
+}
+
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+
+#port img {
+    width: 240px;
+}
+
+#port .title {
+    position: absolute;
+    bottom: 8%;
+    background-color: #eaac9d;
+    color: #ffffff;
+    padding: 10px;
+    width: 240px; 
+    text-align: center;
+}
