--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,11 +24,12 @@ body {
     background-color: #ffffff;
     height: 70px;
     color: #777777;
-    border-bottom: 1.5px solid gray;
+    outline: 2px solid gray;
     position: sticky;
     top: 0px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
 
 #header h1{
     float: left;
@@ -38,7 +39,7 @@ body {
     width: fit-content;
     padding-left: 10px;
     padding-right: 10px;
-    height: 68px;
+    height: 70px;
     margin: 0px;
     margin-left:16.5%;
     padding-top: 15px;
