--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,48 +1,40 @@
-* {
-    box-sizing: border-box;
-  }
-  html,
-  body {
-     margin:0;
-     padding:0;
-     height:100%;
-  }
 
 body {
     background-image: url(../images/background2.png);
-    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
 
-#container {
+.container {
     min-height: 100%;
     position: relative;
 }
 
-#header {
-    margin-bottom: 20px;
+header {
     background-color: #ffffff;
-    height: 70px;
+    clear: both;
     color: #777777;
+    height: 70px;
+    margin-bottom: 20px;
     outline: 2px solid gray;
     position: sticky;
     top: 0px;
+    z-index: 1;
+}
+
+h1, h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-
-#header h1{
-    float: left;
-    font-weight: 300;
+header h1 {
+    float: left;    
     text-align: center;
     background-color: #eaac9d;
     width: fit-content;
-    padding-left: 10px;
-    padding-right: 10px;
+    /* font-weight: 300; */
     height: 70px;
-    margin: 0px;
-    margin-left:16.5%;
-    padding-top: 15px;
+    margin: 0px 0px 0px 16.5%;
+    padding: 15px 5px 15px 5px;
     color: #ffffff;
     position: relative;
     clear: both;
@@ -71,15 +63,12 @@ a:hover {
     font-style: italic;
 }
 
-#main {
+main {
     width: 960px;
-    max-width: 67%;
     background-color: #ffffff;
     text-align: left;
     padding: 20px;
     border: 1px solid #dddddd;
-    margin-left:16.5%;
-    margin-right: 16.5%;
     letter-spacing: 0.1em;
     line-height: 1.5em;
     word-spacing: 0.1em;
@@ -88,21 +77,21 @@ a:hover {
 
 }
 
-#main hr {
+main hr {
     border: 2px dotted #dddddd;
-    margin: 20px;
+    margin: 20px 0px 10px 0px;
 }
 
-#main h2 {
+main h2 {
     color: #eaac9d;
-    font-size: 2em;
     font-weight: 200;
+    font-size: 1.9em;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-#main img {
+main img {
     float: left;
-    margin-right: 10px;
+    margin-right: 20px;
     height: 200px;
     width: 200px;
 }
@@ -140,7 +129,7 @@ input[type=submit] {
     padding-bottom: 2px;
 }
 
-#footer {
+footer {
     height: 50px;
     width: 100%;
     background-color: gray;
@@ -157,30 +146,8 @@ input[type=submit] {
     display: table;
   }
 
-
-#port {
-    position: relative;
-    margin: 10px;
-    float: left
-}
-
 .flex-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
-
-
-#port img {
-    width: 240px;
-}
-
-#port .title {
-    position: absolute;
-    bottom: 8%;
-    background-color: #eaac9d;
-    color: #ffffff;
-    padding: 10px;
-    width: 240px; 
-    text-align: center;
 }
